# cold-eyes-reviewer

./: .cold-review-ignore  .cold-review-policy.gate.yml  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOVER.md  LICENSE  README.md  SECURITY.md  cold-review-helper.py  cold-review-profile.json  cold-review-prompt-shallow.txt  cold-review-prompt.txt  cold-review.sh  cold_review_engine.py  install.sh  pyproject.toml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
cold_eyes/: __init__.py  autotune.py  claude.py  cli.py  config.py  constants.py  context.py  coverage_gate.py  detector.py  doctor.py  engine.py  envelope.py  filter.py  git.py  health.py  helper.py  history.py  intent.py  local_checks.py  memory.py  override.py  policy.py  prompt.py  protection.py  review.py  schema.py  target.py  triage.py  type_defs.py
docs/: agent-setup.md  alpha-scope.md  architecture.md  assurance-matrix.md  benchmark-v1.6.0.md  disclosure_matrix.md  evaluation.md  failure-modes.md  gate-mode.md  history-schema.md  positioning_audit.md  positioning_consistency_checklist.md  release-assurance-template.md  release-checklist.md  release_note_template.md  repo_page_reveal_recommendations.md  roadmap.md  scope-strategy.md  support-policy.md  troubleshooting.md  trust-model.md  tuning.md  version-policy.md
evals/: baseline.json  eval_runner.py  manifest.json  schema.md
tests/: conftest.py  test_autotune.py  test_cli_unified.py  test_contract_generator.py  test_contract_quality.py  test_contract_schema.py  test_coverage_gate.py  test_dedup.py  test_detector.py  test_engine.py  test_eval.py  test_evidence.py  test_failure_taxonomy.py  test_fp_calibration.py  test_gate_catalog.py  test_gate_history.py  test_gate_orchestrator.py  (+36 more)
(+125 files in other folders)
